manifest v2->v3 updt deprecated fnctns  & contacts

--- a/todo.txt
+++ b/todo.txt
@@ -5,9 +5,6 @@ x do away with center
 
 x make not transluscent background
 
-
-change search string to be 
-
-https://maps.google.com/?q=<lat>,<lng>
-
-old search string no longer working
+x change search string to be 
+    https://maps.google.com/?q=<lat>,<lng>
+    old search string no longer working
